--- a/styles/index.html
+++ b/styles/index.html
@@ -37,6 +37,7 @@
    <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png">
    <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png">
    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+   <script type="text/javascript" src="js/redirectLanguage.js"></script>
 </head>
 
 <body id="page-top" class="full" data-spy="scroll" data-target=".navbar-custom">
